--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Registration Form</title>
     <link href="css/style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -11,7 +12,7 @@
             <h1>The Code Review</h1>
         </div>
         <div class="info-container">
-            <h1>Signup For Newsletter</h1>
+            <h2>Signup For newsletter</h2>
             <p>Get the latest news on how your code is doing right in your inbox<p>
         </div>
     </header>
@@ -20,49 +21,51 @@
         <form action="index.html" method="post">
             <fieldset>
                 <legend><h2>Contact Information</h2></legend>
-                <label for="name">Full Name</label>
-                <input type="text" id="name" name="full_name">
+                <div class="form-container">
+                    <label for="name">Full Name</label>
+                    <input type="text" id="name" name="full_name" placeholder="Required">
 
-                <label for="email">Email Address</label>
-                <input type="email" id="email" name="email">
+                    <label for="email">Email Address</label>
+                    <input type="email" id="email" name="email" placeholder="Required">
 
-                <label for="phno">Phone Number</label>
-                <input type="number" id="phno" name="phone_number">
+                    <label for="phno">Phone Number</label>
+                    <input type="telephone" id="phno" name="phone_number">
 
-                <label for="str-add">Street Address</label>
-                <input type="text" id="str-add" name="street_address">
+                    <label for="str-add">Street Address</label>
+                    <input type="text" id="str-add" name="street_address">
 
-                <label for="city">City</label>
-                <input type="text" id="city" name="city_name">
+                    <label for="city">City</label>
+                    <input type="text" id="city" name="city_name">
 
-                <label>State</label>
-                <select>
-                    <option value="panjab">Panjab</option>
-                    <option value="karnataka">Karnataka</option>
-                    <option value="assam">assam</option>
-                    <option value="bihar">Bihar</option>
-                    <option value="haryana">Haryana</option>
-                </select>
+                    <label>State</label>
+                    <select placeholder="Choose State">
+                        <option value="panjab">Panjab</option>
+                        <option value="karnataka">Karnataka</option>
+                        <option value="assam">Assam</option>
+                        <option value="bihar">Bihar</option>
+                        <option value="haryana">Haryana</option>
+                    </select>
 
-                <label for="zip">Zip Code</label>
-                <input type="number" id="zip" name="zip_code">
+                    <label for="zip">Zip Code</label>
+                    <input type="number" id="zip" name="zip_code">
+                </div>
             </fieldset>
             <fieldset>
                 <legend><h2>Newsletter</h2></legend>
                 <p>Select the newsletter you would like to recieve</p>
                 
-                <input type="checkbox"  name="news" value="html"><label>HTML News</label><br>
-                <input type="checkbox"  name="news" value="css"><label>CSS News</label><br>
-                <input type="checkbox"  name="news" value="javascript"><label>HTML News</label><br>
+                <input type="checkbox"  class="radio" name="news" value="html"><label>HTML News</label><br>
+                <input type="checkbox"  class="radio" name="news" value="css"><label>CSS News</label><br>
+                <input type="checkbox"  class="radio" name="news" value="javascript"><label>JavaScript News</label><br>
 
                 <label>Newsletter Format</label>
                 <input type="radio" name="news_format" value="html"><label>HTML</label><br>
-                <input type="radio" name="news_format" value="plain_text"><label>Text</label><br>
+                <input type="radio" name="news_format" value="plain_text"><label>Plain text</label><br>
 
                 <label>Other topics you'd like to hear about</label>
                 <textarea name="comment" id="comment"></textarea>
 
-                <button type="submit" id="button" class="button">Submit</button>
+                <button type="submit" id="button" class="button">Sign Up</button>
             </fieldset>
         </form>
     </main>
