--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
                 <p>Select the newsletter you would like to recieve</p>
                 
                 <input type="checkbox"  class="radio" name="news" value="html"><label>HTML News</label><br>
+                <div class="test"><div class="checkmark"></div></div>
                 <input type="checkbox"  class="radio" name="news" value="css"><label>CSS News</label><br>
                 <input type="checkbox"  class="radio" name="news" value="javascript"><label>JavaScript News</label><br>
 
                 <label>Newsletter Format</label>
-                <input type="radio" name="news_format" value="html"><label>HTML</label><br>
+                <input type="radio" name="news_format" value="Html"><label>HTML</label><br>
                 <input type="radio" name="news_format" value="plain_text"><label>Plain text</label><br>
 
                 <label>Other topics you'd like to hear about</label>
