--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <form action="index.html" method="post">
             <fieldset>
-                <legend><h2>Contact Information</h2></legend>
+                <legend><span>Contact Information</span></legend>
                 <div class="form-container">
                     <label for="name">Full Name</label>
                     <input type="text" id="name" name="full_name" placeholder="Required" required>
@@ -29,7 +29,7 @@
                     <input type="email" id="email" name="email" placeholder="Required" required>
 
                     <label for="phno">Phone Number</label>
-                    <input type="telephone" id="phno" name="phone_number">
+                    <input type="number" id="phno" name="phone_number">
 
                     <label for="str-add">Street Address</label>
                     <input type="text" id="str-add" name="street_address">
@@ -39,7 +39,7 @@
 
                     <label>State</label>
                     <select>
-                        <option value="" selected diabled>Choose State</option>
+                        <option value="" selected disabled><p>Choose State<p></option>
                         <option value="panjab">Panjab</option>
                         <option value="karnataka">Karnataka</option>
                         <option value="assam">Assam</option>
@@ -52,16 +52,16 @@
                 </div>
             </fieldset>
             <fieldset>
-                <legend><h2>Newsletter</h2></legend>
+                <legend><span>Newsletter</span></legend>
                 <p>Select the newsletter you would like to recieve</p>
                 
-                <input type="checkbox"  class="radio" name="news" value="html"><label>HTML News</label><br>
-                <input type="checkbox"  class="radio" name="news" value="css"><label>CSS News</label><br>
-                <input type="checkbox"  class="radio" name="news" value="javascript"><label>JavaScript News</label><br>
+                <input type="checkbox"  id="html_news" name="news" value="html"><label>HTML News</label><br>
+                <input type="checkbox"  id="css_news" name="news" value="css"><label>CSS News</label><br>
+                <input type="checkbox"  id="js_news" name="news" value="javascript"><label>JavaScript News</label><br>
 
                 <label>Newsletter Format</label>
-                <input type="radio" name="news_format" value="html"><label>HTML</label><br>
-                <input type="radio" name="news_format" value="plain_text"><label>Plain text</label><br>
+                <input type="radio" name="news_format" id="html" value="html"><label>HTML</label><br>
+                <input type="radio" name="news_format" id="text" value="plain_text"><label>Plain text</label><br>
 
                 <label>Other topics you'd like to hear about</label>
                 <textarea name="comment" id="comment"></textarea>
