--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
                 <legend><span>Newsletter</span></legend>
                 <p>Select the newsletter you would like to recieve</p>
                 
-                <input type="checkbox"  id="html_news" name="news" value="html"><label>HTML News</label><br>
-                <input type="checkbox"  id="css_news" name="news" value="css"><label>CSS News</label><br>
-                <input type="checkbox"  id="js_news" name="news" value="javascript"><label>JavaScript News</label><br>
+                <input type="checkbox"  id="html_news" name="news" value="html"><label  for="html_news">HTML News</label><br>
+                <input type="checkbox"  id="css_news" name="news" value="css"><label for="css_news">CSS News</label><br>
+                <input type="checkbox"  id="js_news" name="news" value="javascript"><label for="js_news">JavaScript News</label><br>
 
                 <label>Newsletter Format</label>
-                <input type="radio" name="news_format" id="html" value="html"><label>HTML</label><br>
-                <input type="radio" name="news_format" id="text" value="plain_text"><label>Plain text</label><br>
+                <input type="radio" name="news_format" id="html" value="html"><label for="html">HTML</label><br>
+                <input type="radio" name="news_format" id="text" value="plain_text"><label for="text">Plain text</label><br>
 
                 <label>Other topics you'd like to hear about</label>
                 <textarea name="comment" id="comment"></textarea>
