--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <title>Registration Form</title>
-    <link href="css/style.css" rel="stylesheet">
+     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:500&display=swap" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -29,7 +30,7 @@
                     <input type="email" id="email" name="email" placeholder="Required" required>
 
                     <label for="phno">Phone Number</label>
-                    <input type="number" id="phno" name="phone_number">
+                    <input type="tel" id="phno" name="phone_number" placeholder="(Country_code) phone-no">
 
                     <label for="str-add">Street Address</label>
                     <input type="text" id="str-add" name="street_address">
@@ -37,9 +38,9 @@
                     <label for="city">City</label>
                     <input type="text" id="city" name="city_name">
 
-                    <label>State</label>
-                    <select>
-                        <option value="" selected disabled><p>Choose State<p></option>
+                    <label for="select">State</label>
+                    <select id="select" name="state">
+                        <option value="" selected disabled>Choose State</option>
                         <option value="panjab">Panjab</option>
                         <option value="karnataka">Karnataka</option>
                         <option value="assam">Assam</option>
@@ -48,7 +49,7 @@
                     </select>
 
                     <label for="zip">Zip Code</label>
-                    <input type="number" id="zip" name="zip_code">
+                    <input type="text" id="zip" name="zip_code">
                 </div>
             </fieldset>
             <fieldset>
@@ -63,7 +64,7 @@
                 <input type="radio" name="news_format" id="html" value="html"><label for="html">HTML</label><br>
                 <input type="radio" name="news_format" id="text" value="plain_text"><label for="text">Plain text</label><br>
 
-                <label>Other topics you'd like to hear about</label>
+                <label for="comment">Other topics you'd like to hear about</label>
                 <textarea name="comment" id="comment"></textarea>
 
                 <button type="submit" id="button" class="button">Sign Up</button>
